--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,24 +1,95 @@
-body {
-  background-color: black;
+* {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  border: 1px solid red;
 }
 
-h1 {
-  color: beige;
+.nav-varHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-varHeader div {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+.nav-varHeader div img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 160px;
+}
+.nav-varHeader nav {
+  flex: 1;
+  display: flex;
+  justify-content: end;
+}
+.nav-varHeader nav a {
+  margin: 0px 8px;
 }
 
-.ejemplo {
-  background-color: bisque;
-  border: 3px red solid;
+.main-contentContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding: 2%;
 }
-.ejemplo h2 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 39px;
-  color: azure;
+
+.image-mainDiv {
+  display: flex;
+  justify-content: center;
 }
-.ejemplo p {
-  font-family: monospace;
-  color: brown;
-  font-size: 22px;
+.image-mainDiv img {
+  width: 60%;
+}
+
+.second-mainDiv {
+  text-align: center;
+}
+
+.planesDiv {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: center;
+  column-gap: 20px;
+  padding: 2%;
+}
+.planesDiv img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.testi-mainDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2%;
+}
+
+.img-testimoDiv {
+  width: 100%;
+}
+.img-testimoDiv img {
+  width: 100%;
+}
+
+.sign-upForm {
+  padding: 2%;
+}
+.sign-upForm form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 50px;
+}
+
+.page-endFooter {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  column-gap: 20px;
+}
+.page-endFooter div {
+  display: grid;
 }
 
 /*# sourceMappingURL=styles.css.map */
