--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -1,38 +1,85 @@
-$color-principalFont: #1f2937;
-$specialFont: 'Gajraj One', cursive;
-$subtextFont: 'Oswald', sans-serif;
+$color-principalFont: #131314;
+$specialFont: 'Gajraj One';
+$subtextFont: 'Oswald';
 
 * {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   border: 1px solid red;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  html {
+    scroll-behavior: smooth;
+  }
 }
 // Navegation var styles.
 .nav-varHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: white;
+  border-bottom: 0.8px solid rgb(181, 181, 181);
+  padding: 0px 2%;
 
   div {
-    flex: 1;
     display: flex;
     align-items: center;
-    
-
+    cursor: pointer;
       img {
         width: 60px;
         height: 60px;
         object-fit: cover;
         border-radius: 160px;
+        margin-right: 10px;
+      }
+      h3 {
+        font-family: $specialFont;
+        font-size: 17px;
+        text-transform: uppercase;
+        font-variant: small-caps;
+        letter-spacing: 1.5px;
       }
   }
 
   nav {
     flex: 1;
     display: flex;
+    align-items: center;
     justify-content: end;
+    column-gap: 25px;
 
     a {
-      margin: 0px 8px;
+      font-family: $subtextFont;
+      font-weight: 600;
+      font-size: 14px;
+      color: rgb(66, 66, 66);
+      text-decoration: none;
+      letter-spacing: 1px;
+      cursor: pointer;
+      transition: all 0.25s;
+    }
+
+    a:hover {
+      transform: scale(1.1, 1.1);
+      text-decoration: underline;
+    }
+
+    button {
+      margin: 2px;
+      font-family: $subtextFont;
+      font-size: 17px;
+      font-weight: 600;
+      padding: 10px 30px;
+      background-color: white;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      transition: all 0.25s;
+    }
+    button:hover {
+      transform: scale(1.1, 1.1);
+      box-shadow: 0px 0px 16px rgb(183, 183, 183);
     }
   }
 
@@ -42,12 +89,98 @@ $subtextFont: 'Oswald', sans-serif;
 .main-contentContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  place-items: center;
   align-items: center;
   padding: 2%;
+  background-color: white;
+}
+.info-mainDiv {
+  display: grid;
+  align-items: center;
+  row-gap: 20px;
+  padding: 2%;
+  width: 100%;
+  h1 {
+    color: #111;
+    margin: 0px;
+    font-family: $subtextFont;
+    font-size: 50px;
+    font-weight: 900;
+    text-transform: uppercase;
+  }
+  p {
+    margin: 0px;
+    font-size: 22px;
+    line-height: 30px;
+    font-family: $subtextFont;
+    span {
+      color: black;
+      font-weight: 600;
+    }
+  }
+  form {
+    display: flex;
+    justify-content: flex-start;
+    column-gap: 0px;
+    input {
+      font-family: $subtextFont;
+      font-size: 20px;
+      width: 60%;
+      padding: 8px 10px;
+      border: solid 0.3px grey;
+      border-radius: 5px;
+      transition: all 0.25s;
+    }
+    input:hover {
+      border: solid 0.3px #111;
+      box-shadow: 0px 0px 18px rgba(152, 152, 152, 0.656);
+    }
+    input:active {
+      background-color: rgb(207, 207, 207);
+    }
+    input:focus {
+      background-color: rgb(231, 231, 231);
+      border: none;
+      outline: none;
+    }
+    button {
+      font-family: $subtextFont;
+      font-weight: 600;
+      font-size: 20px;
+      padding: 10px 30px;
+      border-radius: 5px;
+      cursor: pointer;
+      background-color: white;
+      color: #111;
+      transition: all 0.25s;
+      border: none;
+    }
+    button:hover {
+      background: #111;
+      color: white;
+      box-shadow: 0px 0px 18px rgba(152, 152, 152, 0.656);
+    }
+  }
+}
+.early-p {
+  background-color: #111;
+  color: white;
+  padding: 8px 20px;
+  width: 80%;
+  border-radius: 28px;
+  a {
+    color: white;
+    text-decoration: none;
+    transition: all 0.20s;
+    cursor: pointer;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
 }
 
-.info-mainDiv {
-
+.descr-p {
+  color: rgb(92, 92, 92);
 }
 
 .image-mainDiv {
@@ -55,32 +188,52 @@ $subtextFont: 'Oswald', sans-serif;
   justify-content: center;
 
   img {
-    width: 60%;
+    width: 65%;
+    border-radius: 8px;
   }
 }
 
 // Styles for the #2 container.
 .second-mainDiv {
   text-align: center;
+  font-family: $subtextFont;
+  color: white;
+  background-color: #111;
+  border: black 1px solid;
+  h2 {
+    font-size: 40px;
+    background-color: #111;
+  }
 }
 .planesDiv {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   align-items: center;
-  column-gap: 20px;
+  column-gap: 30px;
+  width: 100%;
   padding: 2%;
+  margin-bottom: 80px;
 
   img {
     width: 100%;
     object-fit: cover;
+    border-radius: 8px;
+  }
+  p {
+    width: 100%;
+    font-size: 19px;
+    text-align: justify;
+
   }
 }
 
 // Styles for the #3 container.
 .testi-mainDiv {
+  font-family: $subtextFont;
   display: flex;
   justify-content: center;
   align-items: center;
+  column-gap: 60px;
   padding: 2%;
 }
 
@@ -89,6 +242,7 @@ $subtextFont: 'Oswald', sans-serif;
 
   img {
     width: 100%;
+    border-radius: 16px;
   }
 }
 
