60% Done, Last main div styled

--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -3,7 +3,7 @@ $specialFont: 'Gajraj One';
 $subtextFont: 'Oswald';
 
 * {
-  border: 1px solid red;
+  
   box-sizing: border-box;
 }
 
@@ -231,9 +231,10 @@ body {
 .testi-mainDiv {
   font-family: $subtextFont;
   display: flex;
-  justify-content: center;
+  justify-content: flex;
   align-items: center;
   column-gap: 60px;
+  margin-top: 2%;
   padding: 2%;
 }
 
@@ -245,16 +246,88 @@ body {
     border-radius: 16px;
   }
 }
+.testi-data {
+  display: flex;
+  flex-direction: column;
+  h2 {
+    color: grey;
+    font-size: 30px;
+  }
+  span {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 22px;
+    font-weight: bold;
+  }
+  
+}
 
 // Styles for the #4 container.
 .sign-upForm {
+  font-family: $subtextFont;
   padding: 2%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: #111;
+  color: white;
+  margin: 3% 3%;
+  border-radius: 40px;
+  padding: 0;
 
   form {
+    display: grid;
+    place-content: center;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
+    padding: 0 4%;
+    .text-form {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      h3 {
+        font-size: 27px;
+        margin: 0; 
+      }
+      p {
+        font-size: 22px;
+        margin: 0;
+      }
+    }
+
+    .button-container {
+      button {
+        font-size: 18px;
+        font-weight: 600;
+        padding: 10px 20px;
+        background-color: #111;
+        color: white;
+        border: white solid 1.8px;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: all 0.25s;
+      }
+      button:hover {
+        background-color: white;
+        color: #111;
+        transform: translate(-2px, -4px);
+        box-shadow: 1px 3px 16px rgba(255, 255, 255, 0.358);
+      }
+    }
+  
+  }
+
+  div {
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
-    column-gap: 50px;
+    img {
+      object-fit: fill;
+      width: 80%;
+      margin-top: 50px;
+      border-top-right-radius: 20px;
+      border-top-left-radius: 20px;
+    }
   }
 }
 
