--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,5 +1,4 @@
 * {
-  border: 1px solid red;
   box-sizing: border-box;
 }
 
@@ -218,9 +217,10 @@ body html {
 .testi-mainDiv {
   font-family: "Oswald";
   display: flex;
-  justify-content: center;
+  justify-content: flex;
   align-items: center;
   column-gap: 60px;
+  margin-top: 2%;
   padding: 2%;
 }
 
@@ -232,14 +232,81 @@ body html {
   border-radius: 16px;
 }
 
+.testi-data {
+  display: flex;
+  flex-direction: column;
+}
+.testi-data h2 {
+  color: grey;
+  font-size: 30px;
+}
+.testi-data span {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 22px;
+  font-weight: bold;
+}
+
 .sign-upForm {
+  font-family: "Oswald";
   padding: 2%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: #111;
+  color: white;
+  margin: 3% 3%;
+  border-radius: 40px;
+  padding: 0;
 }
 .sign-upForm form {
+  display: grid;
+  place-content: center;
+  grid-template-columns: 2fr 1fr;
+  align-items: center;
+  padding: 0 4%;
+}
+.sign-upForm form .text-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.sign-upForm form .text-form h3 {
+  font-size: 27px;
+  margin: 0;
+}
+.sign-upForm form .text-form p {
+  font-size: 22px;
+  margin: 0;
+}
+.sign-upForm form .button-container button {
+  font-size: 18px;
+  font-weight: 600;
+  padding: 10px 20px;
+  background-color: #111;
+  color: white;
+  border: white solid 1.8px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.25s;
+}
+.sign-upForm form .button-container button:hover {
+  background-color: white;
+  color: #111;
+  transform: translate(-2px, -4px);
+  box-shadow: 1px 3px 16px rgba(255, 255, 255, 0.358);
+}
+.sign-upForm div {
+  width: 90%;
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 50px;
+}
+.sign-upForm div img {
+  object-fit: fill;
+  width: 80%;
+  margin-top: 50px;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
 }
 
 .page-endFooter {
