--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -1,15 +1,15 @@
 ---
+// Layout import
+import DefaultLayout from '../layouts/DEfaultLayout.astro';
+
+// Componnet imports
+import Header from '../components/Header.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<DefaultLayout>
+  <Header />
+  <main>
+    <h1>Nike</h1>
+  </main>
+  <footer></footer>
+</DefaultLayout>
