feat: create cover component

--- a/website/src/components/Header.astro
+++ b/website/src/components/Header.astro
@@ -2,7 +2,7 @@
 import Nav from './NAv.astro';
 ---
 
-<her class="nav-varHeader">
+<header class="nav-varHeader">
   <div aria-label="Website logo" class="logo-navDiv">NikeLite</div>
   <Nav />
-</her>
+</header>
