--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -4,12 +4,13 @@ import DefaultLayout from '../layouts/DEfaultLayout.astro';
 
 // Componnet imports
 import Header from '../components/Header.astro';
+import SectionHero from '../components/SectionHero.astro';
 ---
 
 <DefaultLayout>
   <Header />
   <main>
-    <h1>Nike</h1>
+    <SectionHero />
   </main>
   <footer></footer>
 </DefaultLayout>
