feat: create components

--- a/website/src/components/SectionHero.astro
+++ b/website/src/components/SectionHero.astro
@@ -6,13 +6,13 @@
     Shop all the arrivals
     <a href="#pricing">Shop now!</a>
   </p>
-  <div class="image-mainDiv" class="grid grid-cols-1 md:grid-cols-3">
-    <img src="Images/hero-cover-2.jpg" alt="Woman doing exercise" />
-    <img src="Images/cover-img-4.jpg" alt="Woman doing exercise" />
-    <img src="Images/cover-shoes.jpg" alt="Nike runing shoes" />
+  <div class="grid grid-cols-1 md:grid-cols-3">
+    <img src="/Images/hero-cover-2.jpg" alt="Woman doing exercise" />
+    <img src="/Images/cover-img-4.jpg" alt="Woman doing exercise" />
+    <img src="/Images/cover-shoes.jpg" alt="Nike runing shoes" />
   </div>
   <div class="info-mainDiv">
-    <h1>We're now rediscovering the world</h1>
+    <h1 class="text-5xl">We're now rediscovering the world</h1>
     <p class="descr-p">
       Wherever you decide to run or hike, Nike Trail & Nike ACG are here for
       your next adventure.
