feat: add font nike

--- a/website/src/components/SectionHero.astro
+++ b/website/src/components/SectionHero.astro
@@ -12,7 +12,9 @@
     <img src="/Images/cover-shoes.jpg" alt="Nike runing shoes" />
   </div>
   <div class="info-mainDiv">
-    <h1 class="text-5xl">We're now rediscovering the world</h1>
+    <h1 class="text-5xl nike-font font-extrabold">
+      We're now rediscovering the world
+    </h1>
     <p class="descr-p">
       Wherever you decide to run or hike, Nike Trail & Nike ACG are here for
       your next adventure.
