--- a/website/public/styles/index.css
+++ b/website/public/styles/index.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'nike';
+  src: url('/fonts/nike-logo-font/futura-light.ttf') format('truetype');
+  font-weight: 400;
+}
+
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -47,4 +53,9 @@ h4,
 h5,
 h6 {
   text-wrap: balance;
+}
+
+.nike-font {
+  font-family: 'nike', system-ui, -apple-system, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
