--- a/website/src/components/HeadSeo.astro
+++ b/website/src/components/HeadSeo.astro
@@ -1,13 +1,19 @@
 ---
 import { SEO } from 'astro-seo';
+
+interface Props {
+  title: string;
+}
+
+const { title } = Astro.props;
 ---
 
 <SEO
-  title="Nike Lite"
+  title={title}
   description="It is the nike website. But in a little and simple box."
   openGraph={{
     basic: {
-      title: 'A Very Descriptive Title',
+      title: 'NikeLite || Jjust Do It',
       type: 'A type.',
       image: '',
     },
