--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -12,7 +12,7 @@ import Footer from '../components/Footer.astro';
 import SectionMember from '../components/SectionMember.astro';
 ---
 
-<DefaultLayout>
+<DefaultLayout title="NikeLite | Just Do It">
   <Header />
   <main>
     <SectionHero />
