--- a/website/public/styles/index.css
+++ b/website/public/styles/index.css
@@ -7,26 +7,27 @@
 }
 
 html {
+  color-scheme: dark light;
   box-sizing: border-box;
   scroll-behavior: smooth;
   -webkit-text-size-adjust: 100%;
 }
 
-@layer base {
-  :root {
-    color-scheme: light;
-    --theme-bg: #fafafa;
-    --theme-link: #567c77;
-    --theme-text: #22272a;
-    --theme-accent: #cc2a42;
-    --theme-accent-2: #111;
-    --theme-quote: #cc2a42;
-    --theme-menu-bg: rgb(250 250 250 / 0.85);
-  }
+:root {
+  /* color-scheme: light; */
+  --theme-bg: #fafafa;
+  --theme-link: #567c77;
+  --theme-text: #22272a;
+  --theme-accent: #cc2a42;
+  --theme-accent-2: #111;
+  --theme-quote: #cc2a42;
+  --theme-menu-bg: rgb(250 250 250 / 0.85);
+}
 
-  :root.dark {
-    color-scheme: dark;
-    --theme-bg: #393e42;
+@media (prefers-color-scheme: dark) {
+  :root {
+    /* color-scheme: dark; */
+    --theme-bg: #151719;
     --theme-link: #d480aa;
     --theme-text: #c9cacc;
     --theme-accent: #2bbc89;
@@ -34,45 +35,59 @@ html {
     --theme-quote: #ccffb6;
     --theme-menu-bg: rgb(29 31 33 / 0.85);
   }
+}
 
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    margin: 0;
-    padding: 0;
-  }
+:root.dark {
+  color-scheme: dark;
+  --theme-bg: #393e42;
+  --theme-link: #d480aa;
+  --theme-text: #c9cacc;
+  --theme-accent: #2bbc89;
+  --theme-accent-2: #eee;
+  --theme-quote: #ccffb6;
+  --theme-menu-bg: rgb(29 31 33 / 0.85);
+}
 
-  body {
-    line-height: 1.25;
-  }
-  img,
-  picture,
-  video,
-  canvas,
-  svg {
-    display: block;
-    max-width: 100%;
-  }
-  input,
-  button,
-  textarea,
-  select {
-    font: inherit;
-  }
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  margin: 0;
+  padding: 0;
+}
 
-  p,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    text-wrap: balance;
-  }
+body {
+  line-height: 1.25;
+  background-color: var(--theme-bg);
+  color: var(--theme-text);
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
 }
 
 .nike-font {
