--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -10,9 +10,11 @@ import SectionTrending from '../components/SectionTrending.astro';
 import SectionShoes from '../components/SectionShoes';
 import Footer from '../components/Footer.astro';
 import SectionMember from '../components/SectionMember.astro';
+import HeaderScroll from '../components/HeaderScroll.astro';
 ---
 
 <DefaultLayout title="NikeLite | Just Do It">
+  <HeaderScroll />
   <Header />
   <main class="grid gap-4">
     <SectionHero />
