feat: header scroll animation

--- a/website/src/components/Header.astro
+++ b/website/src/components/Header.astro
@@ -2,7 +2,7 @@
 import Nav from './Nav.astro';
 ---
 
-<header id="header" class="hide" data-fixed="false">
+<header id="header" class="" data-fixed="false">
   <a
     href="/"
     aria-label="Website logo"
