--- a/website/src/components/SectionFeatured.astro
+++ b/website/src/components/SectionFeatured.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<section aria-labelBy="featured">
+<section aria-labelBy="featured" class="p-4 my-12">
   <h2 id="featured">Featured</h2>
   <div class="grid grid-cols-1 md:grid-cols-2">
     <div>
