--- a/website/src/components/SectionHero.astro
+++ b/website/src/components/SectionHero.astro
@@ -1,24 +1,41 @@
 ---
+import Links from './Links.astro';
 ---
 
-<section aria-label="Cover of the website">
-  <p class="early-p">
-    Shop all the arrivals
-    <a href="#pricing">Shop now!</a>
-  </p>
-  <div class="grid grid-cols-1 md:grid-cols-3">
-    <img src="/Images/hero-cover-2.jpg" alt="Woman doing exercise" />
-    <img src="/Images/cover-img-4.jpg" alt="Woman doing exercise" />
-    <img src="/Images/cover-shoes.jpg" alt="Nike runing shoes" />
+<section aria-label="Cover of the website" class="p-4 my-12">
+  <div class="grid gap-4 grid-cols-1 md:grid-cols-3">
+    <img
+      class="aspect-square object-cover"
+      src="/Images/hero-cover-2.jpg"
+      alt="Woman doing exercise"
+    />
+    <img
+      class="aspect-square object-cover"
+      src="/Images/cover-img-4.jpg"
+      alt="Woman doing exercise"
+    />
+    <img
+      class="aspect-square object-cover"
+      src="/Images/cover-shoes.jpg"
+      alt="Nike runing shoes"
+    />
   </div>
-  <div class="info-mainDiv">
-    <h1 class="text-5xl nike-font font-extrabold">
-      We're now rediscovering the world
-    </h1>
-    <p class="descr-p">
+  <div class="grid gap-6 place-items-center text-center mt-12">
+    <h1 class="title"><span>rediscover</span> <span>the world</span></h1>
+    <p class="w-full lg:w-[40em]">
       Wherever you decide to run or hike, Nike Trail & Nike ACG are here for
       your next adventure.
     </p>
-    <a href="/shop">Shop</a>
+    <Links name="Shop" href="/" isFilled={true} />
   </div>
 </section>
+
+<style>
+  h1.title {
+    font-family: 'nike', system-ui, -apple-system, BlinkMacSystemFont,
+      'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+      'Helvetica Neue', sans-serif;
+    font-size: clamp(2.75rem, calc(2.75rem + 3.5vw), 5rem);
+    @apply flex flex-col font-black uppercase leading-none tracking-tighter;
+  }
+</style>
