--- a/website/src/components/SectionTrending.astro
+++ b/website/src/components/SectionTrending.astro
@@ -2,10 +2,10 @@
 import CardLink from './CardLink.astro';
 ---
 
-<section class="p-4 my-12">
+<section id="Trending" class="p-4 my-12">
   <h2 class="text-2xl font-bold mb-8">Trending</h2>
   <div
-    class="overflow-scroll p-4 grid gap-4 grid-flow-col auto-cols-[30%] snap-mandatory"
+    class="overflow-scroll p-4 grid gap-4 grid-flow-col auto-cols-[55%] lg:auto-cols-[30%] snap-mandatory"
   >
     <CardLink
       name="Memebers: find your dunk"
