feat: react component scroll shoes

--- a/website/src/components/Header.astro
+++ b/website/src/components/Header.astro
@@ -23,7 +23,7 @@ import Nav from './Nav.astro';
 
 <style>
   header {
-    @apply relative flex items-center justify-between px-8;
+    @apply relative flex items-center justify-between px-8 z-10;
     transition: all 300ms ease-in-out;
   }
 
