--- a/website/src/components/SectionMember.astro
+++ b/website/src/components/SectionMember.astro
@@ -12,6 +12,6 @@
         <a href="/">Sign In</a>
       </div>
     </div>
-    <img src="/Images/icons/nike-logo.png" alt="nike logo png" />
+    <img class="w-12" src="/Images/icons/nike-logo.png" alt="nike logo png" />
   </div>
 </section>
