--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -19,7 +19,7 @@ import HeaderScroll from '../components/HeaderScroll.astro';
     <SectionHero />
     <SectionTrending />
     <SectionFeatured />
-    <SectionShoes client:load />
+    <SectionShoes client:only />
     <SectionMember />
   </main>
   <Footer />
