fix: ui layout overflow

--- a/website/src/components/SectionFeatured.astro
+++ b/website/src/components/SectionFeatured.astro
@@ -29,12 +29,12 @@ const shoes = [
   <div class="lg:h-[40em] grid gap-4 grid-cols-1 lg:grid-cols-2">
     <article class="relative h-full">
       <img
-        class="object-cover w-full h-[40em]"
+        class="object-cover w-full lg:h-[40em]"
         src="/Images/featured-img.jpg"
         alt="Woman doing yoga"
       />
       <div
-        class="absolute bottom-4 p-4 flex flex-col items-start gap-6 w-[18em]"
+        class="absolute bottom-4 p-4 flex flex-col items-start gap-6 w-[15em] bg-white"
       >
         <h3 class="font-bold text-2xl">Rise and Shine in phoenix fleece</h3>
         <Links name="Shop" href="/" isFilled={true} />
@@ -53,7 +53,7 @@ const shoes = [
         }
       </div>
       <div
-        class="p-6 lg:h-[12em] flex flex-col items-start justify-center gap-4"
+        class="p-6 lg:h-[15em] flex flex-col items-start justify-center gap-4"
       >
         <p class="font-bold text-2xl">Must-Have Air Max</p>
         <Links name="Shop All" href="/" isFilled={true} />
