--- a/website/src/layouts/DefaultLayout.astro
+++ b/website/src/layouts/DefaultLayout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
     <HeadSeo title={title} />
     <link rel="stylesheet" href="/styles/index.css" />
   </head>
-  <body id="body" class="grid">
+  <body id="body" class="">
     <slot />
     <HeaderScroll />
   </body>
