--- a/website/src/components/Header.astro
+++ b/website/src/components/Header.astro
@@ -23,7 +23,7 @@ import Nav from './Nav.astro';
 
 <style>
   header {
-    @apply relative flex items-center justify-between px-8 z-10;
+    @apply relative flex items-center justify-between px-8;
     transition: all 300ms ease-in-out;
   }
 
@@ -33,6 +33,7 @@ import Nav from './Nav.astro';
 
   header[data-fixed='true'] {
     position: fixed;
+    z-index: 999999;
     inset: 0 0 auto 0;
     background-color: var(--theme-bg);
     transform: translateY(0);
