--- a/website/src/components/SectionHero.astro
+++ b/website/src/components/SectionHero.astro
@@ -32,10 +32,10 @@ import Links from './Links.astro';
 
 <style>
   h1.title {
-    font-family: 'nike', system-ui, -apple-system, BlinkMacSystemFont,
-      'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-      'Helvetica Neue', sans-serif;
-    font-size: clamp(2.75rem, calc(2.75rem + 3.5vw), 5rem);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+      sans-serif;
+    font-size: clamp(2.5rem, calc(2rem + 3.5vw), 5rem);
     @apply flex flex-col font-black uppercase leading-none tracking-tighter;
   }
 </style>
