--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -20,14 +20,14 @@ import HeaderScroll from '../components/HeaderScroll.astro';
     <SectionTrending />
     <SectionFeatured />
     <SectionShoes client:only />
-    <SectionMember />
+    <!-- <SectionMember /> -->
   </main>
-  <Footer />
+  <!-- <Footer /> -->
 </DefaultLayout>
 
 <style>
   main {
-    width: min(100%, 104em);
+    width: min(100%, 90em);
     margin: 0 auto;
   }
 </style>
