--- a/website/src/components/SectionFeatured.astro
+++ b/website/src/components/SectionFeatured.astro
@@ -26,7 +26,7 @@ const shoes = [
 
 <section id="featured" aria-labelBy="featured" class="p-4 my-12">
   <h2 class="text-2xl font-bold mb-8">Featured</h2>
-  <div class="lg:h-[40em] grid gap-4 grid-cols-1 lg:grid-cols-2">
+  <div class="relative lg:h-[40em] grid gap-4 grid-cols-1 lg:grid-cols-2">
     <article class="relative h-full">
       <img
         class="object-cover w-full lg:h-[40em]"
@@ -34,7 +34,7 @@ const shoes = [
         alt="Woman doing yoga"
       />
       <div
-        class="absolute bottom-4 p-4 flex flex-col items-start gap-6 w-[15em] bg-white"
+        class="absolute bottom-8 p-4 flex flex-col items-start gap-6 w-[15em] bg-white"
       >
         <h3 class="font-bold text-2xl">Rise and Shine in phoenix fleece</h3>
         <Links name="Shop" href="/" isFilled={true} />
