--- a/website/src/components/SectionHero.astro
+++ b/website/src/components/SectionHero.astro
@@ -3,19 +3,19 @@ import Links from './Links.astro';
 ---
 
 <section aria-label="Cover of the website" class="p-4 my-12">
-  <div class="grid gap-4 grid-cols-1 md:grid-cols-3">
+  <div class="grid gap-4 md:grid-cols-3">
     <img
-      class="aspect-square object-cover"
+      class="aspect-square object-cover w-full"
       src="/Images/hero-cover-2.jpg"
       alt="Woman doing exercise"
     />
     <img
-      class="aspect-square object-cover"
+      class="aspect-square object-cover w-full"
       src="/Images/cover-img-4.jpg"
       alt="Woman doing exercise"
     />
     <img
-      class="aspect-square object-cover"
+      class="aspect-square object-cover w-full"
       src="/Images/cover-shoes.jpg"
       alt="Nike runing shoes"
     />
