--- a/website/src/components/HeadSeo.astro
+++ b/website/src/components/HeadSeo.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
   }}
   extend={{
     // extending the default link tags
-    link: [{ rel: 'icon', href: '/favicon.ico' }],
+    link: [{ rel: 'icon', href: '/' }],
     // extending the default meta tags
     meta: [
       {
