--- a/website/src/layouts/DefaultLayout.astro
+++ b/website/src/layouts/DefaultLayout.astro
@@ -8,6 +8,9 @@ const { title } = Astro.props;
 <html lang="en-Us">
   <head>
     <HeadSeo title={title} />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/index.css" />
   </head>
   <body id="body" class="">
