feat: style members section

--- a/website/src/components/SectionMember.astro
+++ b/website/src/components/SectionMember.astro
@@ -1,17 +1,31 @@
 ---
+import Links from './Links.astro';
 ---
 
-<section>
-  <h2>Nike membership</h2>
-  <div>
-    <div>
-      <h3>Becomen a member</h3>
-      <p>Sign up for free. Join the community.</p>
-      <div>
-        <a href="/">Join Us</a>
-        <a href="/">Sign In</a>
+<section class="p-4 my-12">
+  <h2 class="text-2xl font-bold mb-8">Nike Membership</h2>
+  <div
+    class="bg-gray-800 p-8 flex flex-col md:flex-row justify-between items-center"
+  >
+    <div class="flex flex-col gap-6">
+      <h3
+        class="text-5xl text-gray-100 font-black uppercase leading-none tracking-tighter"
+      >
+        Becomen a <span class="block">member</span>
+      </h3>
+      <p class="text-gray-100">Sign up for free. Join the community.</p>
+      <div class="flex gap-2">
+        <Links name="Join Us" href="https://www.nike.com/membership" />
+        <Links
+          name="Sign in"
+          href="https://accounts.nike.com/lookup?client_id=4fd2d5e7db76e0f85a6bb56721bd51df&redirect_uri=https://www.nike.com/auth/login&response_type=code&scope=openid%20nike.digital%20profile%20email%20phone%20flow%20country&state=1926de2d4e39455388d0c435b25c4b93&code_challenge=vjle9_96hMKGYe59Z3KEHuSkRz9idZWgdU_ncn4jt5Y&code_challenge_method=S256"
+        />
       </div>
     </div>
-    <img class="w-12" src="/Images/icons/nike-logo.png" alt="nike logo png" />
+    <img
+      class="w-[35em] aspect-[16/7] object-contain"
+      src="/Images/icons/nike-logo-white.png"
+      alt="nike logo png"
+    />
   </div>
 </section>
