--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -20,7 +20,7 @@ import HeaderScroll from '../components/HeaderScroll.astro';
     <SectionTrending />
     <SectionFeatured />
     <SectionShoes client:only />
-    <!-- <SectionMember /> -->
+    <SectionMember />
   </main>
   <!-- <Footer /> -->
 </DefaultLayout>
