--- a/website/src/components/Links.astro
+++ b/website/src/components/Links.astro
@@ -19,7 +19,7 @@ const { href, name, isFilled, classes } = Astro.props;
 
 <style>
   a.links {
-    @apply px-4 py-2  rounded-full border border-transparent font-bold hover:opacity-80 transition-all;
+    @apply px-4 py-2  bg-slate-100 rounded-full border border-transparent font-bold hover:opacity-80 transition-all;
   }
 
   a[data-filled='true'] {
