--- a/website/src/components/SectionFeatured.astro
+++ b/website/src/components/SectionFeatured.astro
@@ -34,7 +34,7 @@ const shoes = [
         alt="Woman doing yoga"
       />
       <div
-        class="absolute bottom-8 p-4 flex flex-col items-start gap-6 w-[15em] bg-white"
+        class="absolute bottom-[10%] p-4 flex flex-col items-start gap-6 w-[15em]"
       >
         <h3 class="font-bold text-2xl">Rise and Shine in phoenix fleece</h3>
         <Links name="Shop" href="/" isFilled={true} />
